# geometric-solver

./: CMakeLists.txt  README.md  constraint_solver.py  main.cpp  main.py
include/: Button.h  Constraint.h  EventHandler.h  Line.h  Point.h  Solver.h  events.h
src/: Button.cpp  EventHandler.cpp
